--- a/package.json
+++ b/package.json
@@ -20,12 +20,16 @@
     "react": "^16.6.1",
     "react-dom": "^16.2.0",
     "react-jss": "^8.6.1",
-    "react-responsive": "^6.0.1"
+    "react-loading": "^2.0.3",
+    "react-responsive": "^6.0.1",
+    "simple-crypto-js": "^2.0.2"
   },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.1.0",
     "babel-core": "^6.26.3",
     "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-decorators-legacy": "^1.3.5"
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "file-saver": "^2.0.0"
   }
 }
