--- a/package.json
+++ b/package.json
@@ -5,13 +5,12 @@
   "main": "src/js/main.js",
   "scripts": {
     "build": "parcel build src/js/main.js -d src/build/ -o main.js",
-    "watch": "parcel watch src/js/main.js -d src/build/ -o main.js"
+    "watch": "parcel watch src/js/main.js -d src/build/ -o main.js",
+    "test": "jest"
   },
   "author": "anisa",
   "license": "MIT",
   "dependencies": {
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
     "classnames": "^2.2.6",
     "mobx": "^5.6.0",
     "mobx-react": "^5.3.6",
@@ -27,9 +26,14 @@
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.1.0",
     "babel-core": "^6.26.3",
+    "babel-jest": "^23.6.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "file-saver": "^2.0.0"
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
+    "file-saver": "^2.0.0",
+    "jest": "^23.6.0",
+    "react-test-renderer": "^16.7.0"
   }
 }
