--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "primer": "^10.9.0",
     "react": "^16.6.1",
     "react-dom": "^16.2.0",
+    "react-file-reader": "^1.1.4",
     "react-jss": "^8.6.1",
     "react-loading": "^2.0.3",
     "react-responsive": "^6.0.1",
