generation for several pages

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -14,7 +14,7 @@
   "content_scripts": [
     {
       "matches": ["http://*/*", "https://*/*"],
-      "js": ["src/build/main.js"]
+      "js": ["build/main.js"]
     }
   ]
 }
