--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,13 @@
 {
-  "presets": ["env", "react"],
-  "plugins": ["transform-decorators-legacy","transform-class-properties", "transform-object-rest-spread"]
+  "presets": ["@babel/preset-env","@babel/preset-react"],
+  "plugins": [
+    ["@babel/transform-runtime",
+      {
+        "regenerator": true
+      }
+    ],
+    ["@babel/plugin-proposal-decorators", { "legacy": true }],
+    "transform-class-properties",
+    "transform-object-rest-spread"
+  ]
 }
