--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "MIT",
   "dependencies": {
     "classnames": "^2.2.6",
+    "jquery": "^3.3.1",
     "mobx": "^5.6.0",
     "mobx-react": "^5.3.6",
     "parcel-bundler": "^1.6.2",
@@ -26,14 +27,17 @@
     "simple-crypto-js": "^2.0.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.3.4",
     "@babel/plugin-proposal-class-properties": "^7.1.0",
-    "babel-core": "^6.26.3",
+    "@babel/plugin-proposal-decorators": "^7.3.0",
+    "@babel/plugin-transform-runtime": "^7.3.4",
+    "@babel/preset-env": "^7.3.4",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/runtime": "^7.3.4",
     "babel-jest": "^23.6.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^7.0.0-beta.3",
     "file-saver": "^2.0.0",
     "jest": "^23.6.0",
     "react-test-renderer": "^16.7.0"
